--- a/html/index.html
+++ b/html/index.html
@@ -9,12 +9,14 @@
        </title>
 </head>
 <body>
-    <div>
+    <div id="titulo" name="titulo">
         <h1>
             TO-DO LIST
         </h1>
-        <input type="text" id="Task" name="Task" placeholder="Add a task to do">
-        <button onclick="addTask()" >Add Task</button>
+        <div class="buttonIn">
+            <input type="text" id="Task" name="Task" placeholder="Add a task to do">
+            <button onclick="addTask()" >Add Task</button>
+        </div>
     </div>
     <div id="toDoList"></div>
 </body>
