--- a/html/index.html
+++ b/html/index.html
@@ -1,4 +1,4 @@
-<script src="../javascript/index.js"></script>
+
 <!DOCTYPE html>
 <html lang="pt">
 
@@ -23,10 +23,11 @@
         </div>
     </div>
     <div class="content--body">
-        <ol id="toDoList">
+        <ol id="toDoList" class="toDoList">
         </ol>
     </div>
 </body>
 
 </html>
+<script src="../javascript/index.js"></script>
 <link rel="stylesheet" href="../css/index.css">
