--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#333">
     <title>To-do List</title>
-    <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="css/index.css">
 </head>
 
 <body>
@@ -43,7 +43,7 @@
             </section>
         </main>
     </div>
-    <script src="../javascript/index.js"></script>
+    <script src="javascript/index.js"></script>
 </body>
 
 </html>
